--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,7 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item {{#if isIndex}} active {{/if}}">
-                <a class="nav-link" href="/">Карта</a>
+                <a class="nav-link" href="/" style="font-weight:bolder;">Карта</a>
+            </li>
+            <li class="nav-item {{#if isPartners}} active {{/if}}">
+                <a class="nav-link" href="/partners" style="font-weight:bolder;">Партнёры</a>
             </li>
             <li class="nav-item {{#if isObjectsEditor}} active {{/if}}">
                 <a class="nav-link" href="/objects_editor">Редактор "Объекты"</a>
