dish-and-restaurants

--- a/public/css/styles/index.css
+++ b/public/css/styles/index.css
@@ -5,3 +5,10 @@
 .card-choosen {
     border: 5px dashed black !important;
 }
+
+
+.restaurant-open-modal:hover {
+    cursor: pointer;
+    color: blue !important;
+    text-decoration: underline !important;
+}
